Cover all Comparison operators in TestColumnarFilters
The tests previously built filter expressions as Call to the operator
function (e.g. resolveOperator(LESS_THAN, ...)), which dispatches through
the Call arm of ColumnarFilterCompiler.generateFilterInternal. The
Comparison arm — and its operand-swap for GREATER_THAN /
GREATER_THAN_OR_EQUAL — was therefore never exercised by these tests.

Switch the comparison filters to Comparison IR nodes and merge testEq,
testLessThan, and testIsNotDistinctFrom into a single testComparison
that loops over EQUAL, LESS_THAN, LESS_THAN_OR_EQUAL, GREATER_THAN,
GREATER_THAN_OR_EQUAL, and IDENTICAL. Rename testNot to testNotEqual
to reflect that it now drives the NOT_EQUAL arm directly.

(cherry picked from commit 64f2373193922aabcfea7c7affc852dd94a473a5)
(cherry picked from commit 0ec4c92be0e34bf9b31cb5e7da5a6674508a364e)